# sanic-beskar

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yml  CHANGELOG.rst  CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  SECURITY.md  prospector.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: codacy-analysis.yaml  codeql.yml  deploy.yml  deploy_pre_release.disabled  deploy_pre_release.yml  devskim.yml  main.yml  mayham.yml  mayham.yml.disabled  security.yml  tox.yml  unit_testing.yml
docs/: conduct.rst  conf.py  configuration.rst  contributing.rst  developer_guide.rst  index.rst  notes.rst  overview.rst  quickstart.rst  requirements.txt
docs/_static/: icon.xcf  logo.xcf
docs/source/: modules.rst  sanic_beskar.rst  sanic_praetorian.orm.rst  sanic_praetorian.rst
example/: basic.py  basic_mongo.py  basic_umongo.py  basic_with_beanie_mixin.py  basic_with_rbac.py  basic_with_tortoise_mixin.py  basic_with_umongo_mixin.py  blacklist.py  custom_claims.py  refresh.py  register.py
sanic_beskar/: __init__.py  base.py  constants.py  decorators.py  exceptions.py  utilities.py
sanic_beskar/orm/: __init__.py  beanie_user_mixins.py  tortoise_user_mixins.py  umongo_user_mixins.py
sanic_praetorian/: __init__.py  base.py  constants.py  decorators.py  exceptions.py  utilities.py
sanic_praetorian/orm/: __init__.py  tortoise_user_mixins.py  umongo_user_mixins.py
tests/: _models.py  conftest.py  models.py  old_conftest.py.old  server.py  test_base.py  test_decorators.py  test_self.py  test_user_mixins.py  test_utilities.py
