[tool.poetry]
name = "sanic-beskar"
version = "2.3.1"
description = "Strong, Simple, (now async!) and Precise security for Sanic APIs"
authors = ["Rob Dailey <rob@suspected.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://sanic-beskar.readthedocs.io/en/latest/"
documentation = "https://sanic-beskar.readthedocs.io/en/latest/"
repository = "https://github.com/pahrohfit/sanic-beskar"

[tool.poetry.group.typing.dependencies]
types-ujson = "^5.7"
types-toml = "^0.10"
types-aiofiles = "^23"
types-passlib = "^1.7"
mongo-types = "^0.15"
mypy = "^1.1"

[tool.poetry.group.dev.dependencies]
bcrypt = ">=4.0.1, <5"
plummet = {version = "^1.1", extras = ["time-machine"]}
sanic-testing = "^23.3"
pytest-asyncio = "^0.21"
tortoise-orm = ">=0.19.2, < 21.0"
nest-asyncio = "^1.5.5"
pytest-cov = "^4.0.0"
umongo = ">=3.1.0, <4.0"
motor = ">=3.1.0, <4.0"
pytest-profiling = "^1.7.0"
fastpbkdf2 = ">=0.2"
segno = ">=1.5.2, <2.0"
pytest = "^7.2.0"
beanie = ">=1.11.7, <=2.0"
mongomock-motor = ">=0.0.19"
mongomock = ">=4.1.2"
ipdb = "^0.13.9"
bandit = "^1.7.4"
flake8-async = "^22.11.6"
safety = ">=2.3"
async-sender = ">=2.0.0"
pytest-xdist = "^3.0.2"
tox = "^4.11.3"

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
sphinx = ">=7.1, <8.0"
furo = "^2023.5.20"

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'def __repr__',
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["example/", "docs/", "tests/"]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
pyjwt = ">=2.6"
pendulum = [
    { version = ">=2.1, <=3.1", allow-prereleases = true, python = ">=3.8,<3.12" },
    { version = "3.0.*", allow-prereleases = true, python = ">=3.12" },
]
passlib = ">=1.7"
sanic = ">=22.6.0, <=24.0"
pyseto = ">=1.6.9"
py-buzz = ">3.2.0, <5.0"
cryptography = ">=39.0.0, <42.0"
jinja2 = ">=3.1.2"

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
#log_format = "%(asctime)-15s | %(levelname)-6s | %(threadName)-12s | %(filename)s:%(lineno)d | %(message)s"
#log_date_format = "%Y-%m-%d %H:%M:%S"
#log_cli = "false"
#log_level = "DEBUG"
addopts = "--color=auto --code-highlight=yes -n auto --maxprocesses=4"

[tool.black]
line-length = 100
preview-string-processing = true
target-version = ['py311']
include = ['sanic_beskar/', 'tests']

[tool.bandit]
skips = ['B101']
exclude_dirs = ['tests/']

[tool.ruff]
line-length = 100
target-version = 'py38'
src = ["sanic_beskar", "tests"]
ignore = ["E501", "E402", "N818", "A002", "A003", "B904", "N805", "B006", "E712", "S106", "S105", "B028"]
exclude = [".mypy_cache", ".vscode", ".git", ".pytest_cache", ".github", "__pycache__", "example", "docs", "tests"]
select = ["E", "F", "B", "W", "I", "N", "UP", "ASYNC", "S", "A", "RSE", "RET"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101", "D100", "D102", "D101", "D103", "S311", "D104"]
